# ESP32-Robot

./: .dockerignore  .gitattributes  .gitignore  API.md  CLAUDE.md  Dockerfile.firmware  README.md  platformio.ini
dev-hub/: .gitignore  README.md  pyproject.toml
dev-hub/app/: config.py  db.py  main.py  models.py  repository.py
dev-hub/app/agents/: claude.py  codex.py  runner.py
dev-hub/app/tasks/: runner.py
dev-hub/app/workspace/: git_manager.py
dev-hub/tests/: test_agent_runner.py  test_git_manager.py
docs/: AI_STACK_SELECTION.md  BUILD.md  HARDWARE_TEST_LOG.md  MOTOR_CONTROL.md  PROGRESS.md  PROJECT_PLAN.md
include/: audio.h  control_panel.h  secrets.example.h
lib/motor_config/src/: motor_config.cpp  motor_config.h
lib/motor_policy/src/: motor_policy.cpp  motor_policy.h
lib/network_config/src/: network_config.cpp  network_config.h
python/: SKILL.md  _meta.json  esp32_robot.py  esp32_robot_skill.py
scripts/: embed_control_panel.py  firmware-build.ps1  firmware-build.sh  host-test.ps1  host-test.sh
src/: audio.cpp  main.cpp
test/: host_motor_policy.cpp
tools/: control_panel_preview.py
web/: control-panel.html
